--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kommand",
+  "name": "@michael-dean-haynie/kommand",
   "version": "0.0.0",
   "description": "",
   "bin": {
@@ -10,10 +10,11 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "npm publish --access public",
     "prepublishOnly": "npm run build"
   },
   "keywords": [],
-  "author": "Michael Haynie",
+  "author": "Michael Dean Haynie",
   "license": "MIT",
   "files": [
     "./dist"
