--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@michael-dean-haynie/kommand",
   "version": "0.1.0",
-  "description": "",
+  "description": "A CLI productivity utility.",
   "repository": {
     "type": "git",
     "url": "https://github.com/michael-dean-haynie/kommand.git"
